--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+    <div class="navbar navbar-expand-md">
+        <div class="navbar-brand">
+            <img src="images/logo.jpg" alt="climatics logo">
+        </div>
+    </div>
 </body>
 
 </html>
