added about section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,27 @@
     </nav>
 
     <!-- hero section -->
-    <div class="container-fluid">
-        <div class="hero">
-
+    <section class="bgimage">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h1 class="slogan">Putting you in control of your environment</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="about">
+        <h2>About Us</h2>
+        <div class="about-text">
+            <p>Based in Melbourne, Climatics Heating and Cooling offers a comprehensive range of services to residential and commercial customers right across the city and Macedon Ranges. Our professional and experienced team of technicians specialise in
+                Hydronic Heating, Hydronic Underfloor Heating, Gas Ducted Heating, Air Conditioning and Ventilation. </p>
+            <p>
+                Here at Climatics, we understand that when it comes to the installation of new heating and cooling systems, you want minimum disruption and maximum results. With us, you can be confident that you will receive a professional service every time. We work
+                hard to continually exceed the expectations of our customers and the quality of our service is built on the foundations of 30 years' industry experience in Australia and the UK. </p>
+            <p>
+                All components and systems are covered by manufacturer's warranty and all work is carried out in accordance to government standards and requirements. Take control of your environment and live in complete comfort all year round. For more information on
+                Climatics Heating and Cooling, visit our website or call our team today.</p>
+            </p>
         </div>
     </div>
 </body>
