adding services section and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
     <title>Climatics</title>
 </head>
 
@@ -52,9 +55,17 @@
             </div>
         </div>
     </section>
+
+    <!-- our services section -->
+    <div class="services">
+        <h2>Our Services</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quos ea quasi, ipsa voluptate enim accusantium delectus aspernatur animi repudiandae, eius quibusdam molestias! Magnam distinctio corrupti non rem eius voluptatibus?</p>
+    </div>
+    <!-- about us section -->
     <div class="about">
-        <h2>About Us</h2>
         <div class="about-text">
+            <h2>About Us</h2>
+
             <p>Based in Melbourne, Climatics Heating and Cooling offers a comprehensive range of services to residential and commercial customers right across the city and Macedon Ranges. Our professional and experienced team of technicians specialise in
                 Hydronic Heating, Hydronic Underfloor Heating, Gas Ducted Heating, Air Conditioning and Ventilation. </p>
             <p>
@@ -63,9 +74,14 @@
             <p>
                 All components and systems are covered by manufacturer's warranty and all work is carried out in accordance to government standards and requirements. Take control of your environment and live in complete comfort all year round. For more information on
                 Climatics Heating and Cooling, visit our website or call our team today.</p>
-            </p>
         </div>
     </div>
+    </div>
+
+    <!-- footer -->
+    <footer>
+        <p> &#169; 2021 Robin Klaus</p>
+    </footer>
 </body>
 
 </html>
