--- a/index.html
+++ b/index.html
@@ -46,26 +46,50 @@
     </nav>
 
     <!-- hero section -->
-    <section class="bgimage">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h1 class="slogan">Putting you in control of your environment</h1>
-                </div>
-            </div>
+    <div class="hero-container">
+        <div class="hero"></div>
+        <div class="hero-content d-flex align-items-end flex-column" style="height: 200px" ;>
+            <h1>Heating & Air Conditioning in Melbourne</h1>
+            <a class="btn">Contact Us</a>
         </div>
-    </section>
+    </div>
+    <div class="hero-info">
+        <div class="hero-text">
+            <p>Climatics Heating & Cooling Melbourne specialise in all forms of heating and cooling catering for all budgets. From the greener and highly efficient and inverter AC split , to the traditional systems. Climatics are determined to help Melbourne
+                home owners make choosing your heating and cooling a simple process, by recommending the perfect system to suit your needs and budget. We deliver a professional service every time. We are client-driven and always aim to exceed your expectations.
+                So don’t delay, get Climatics to put you in control of your environment.</p>
+            <p class="strong">We offer a free 3 month preventative maintenance service for our hydronic heating installations (conditions apply).</p>
+            <p>Free no obligation quotes. We offer a professional service with all quotes provided in writing. Professional, friendly, reliable and presentable staff who will not leave your house in a mess. We come to you and advise you of the most efficient
+                and cost effective heating and cooling solutions for your home. We specialise in jobs that require attention to detail.</p>
+        </div>
+    </div>
 
     <!-- our services section -->
     <div class="services">
-        <h2>Our Services</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quos ea quasi, ipsa voluptate enim accusantium delectus aspernatur animi repudiandae, eius quibusdam molestias! Magnam distinctio corrupti non rem eius voluptatibus?</p>
+        <div class="hero-text">
+            <h2>Our Services</h2>
+            <h3>Hydronic Heating</h3>
+            <p>Radiators or Underfloor – Hydronic heating is the most energy efficient, safe and hygienic way to heat your whole home. It offers comfortable warmth while saving you money on your energy bills at the same time as reducing your carbon footprint.
+                Hydronic Heating is an energy efficient, dust free, healthy, quiet, and reliable heat.</p>
+            <h3>Air Conditioning</h3>
+            <p>
+                Climatics offer a range of the latest refrigerated A/C split systems that utilise “inverter technology”. The inverter is a compressor that fluctuates its speed as required to meet the A/C requirements, while saving you on energy costs. Reverse Cycle A/C
+                offers powerful, energy efficient heating and cooling to ensure uninterrupted comfort.
+            </p>
+            <h3>Gas Ducted Heating</h3>
+            <p>Gas ducted heating has been heating Melbourne homes for generations. Climatics offers a range of the latest ducted heating systems that will save you on energy. Gas Ducted Heating offers an affordable and reliable heating solution for your
+                home.
+            </p>
+            <h3>Ventilation</h3>
+            <p>To ensure the air you breathe is high quality and free from moisture, odours, smoke, heat, dust, airborne bacteria and carbon dioxide. Climatics offer a range of mechanical ventilation systems for domestic and commercial buildings. Hygienic,
+                clean, fresh, reliable.</p>
+            <h3></h3>
+        </div>
     </div>
     <!-- about us section -->
     <div class="about">
-        <div class="about-text">
+        <div class="hero-text">
             <h2>About Us</h2>
-
             <p>Based in Melbourne, Climatics Heating and Cooling offers a comprehensive range of services to residential and commercial customers right across the city and Macedon Ranges. Our professional and experienced team of technicians specialise in
                 Hydronic Heating, Hydronic Underfloor Heating, Gas Ducted Heating, Air Conditioning and Ventilation. </p>
             <p>
