added supplier images and page links

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Services</a>
+                        <a class="nav-link" href="#services">Our Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="#about">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="#contact">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -47,11 +47,12 @@
 
     <!-- hero section -->
     <div class="hero-container">
-        <div class="hero"></div>
+
         <div class="hero-content d-flex align-items-end flex-column" style="height: 200px" ;>
-            <h1>Heating & Air Conditioning in Melbourne</h1>
+            <h1>Putting you in control of your environment</h1>
             <a class="btn">Contact Us</a>
         </div>
+        <div class="hero"></div>
     </div>
     <div class="hero-info">
         <div class="hero-text">
@@ -65,7 +66,7 @@
     </div>
 
     <!-- our services section -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="hero-text">
             <h2>Our Services</h2>
             <h3>Hydronic Heating</h3>
@@ -86,8 +87,33 @@
             <h3></h3>
         </div>
     </div>
+
+    <!-- suppliers -->
+    <div class="suppliers">
+        <div class="services">
+            <h3>Our Preferred Suppliers</h3>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="images/1download.png">
+                <img src="images/download (1).png">
+                <img src="images/download (4).jpg">
+                <img src="images/download (5).jpg">
+                <img src="images/images.png">
+                <img src="images/download (7).png">
+            </div>
+            <div class="column">
+                <img src="images/download (99).jpg">
+                <img src="images/images (1).png">
+                <img src="images/Images (2).png">
+                <img src="images/download (8).png">
+                <img src="images/download (6).png">
+            </div>
+        </div>
+    </div>
+
     <!-- about us section -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="hero-text">
             <h2>About Us</h2>
             <p>Based in Melbourne, Climatics Heating and Cooling offers a comprehensive range of services to residential and commercial customers right across the city and Macedon Ranges. Our professional and experienced team of technicians specialise in
@@ -97,7 +123,7 @@
                 hard to continually exceed the expectations of our customers and the quality of our service is built on the foundations of 30 years' industry experience in Australia and the UK. </p>
             <p>
                 All components and systems are covered by manufacturer's warranty and all work is carried out in accordance to government standards and requirements. Take control of your environment and live in complete comfort all year round. For more information on
-                Climatics Heating and Cooling, visit our website or call our team today.</p>
+                Climatics Heating and Cooling, call our team today.</p>
         </div>
     </div>
     </div>
