added js code for stick back to top button and added z-index to cta button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="hero-container">
         <div class="hero-content d-flex align-items-end flex-column" style="height: 200px" ;>
             <h1>Putting you in control of your environment</h1>
-            <a class="btn">Contact Us</a>
+            <a class="btn" href="#contact" role="button">Contact Us</a>
         </div>
         <div class="hero"></div>
     </div>
@@ -164,7 +164,6 @@
                 </div>
             </div>
         </div>
-        <a href="#home">Back to Top</a>
     </div>
 
 
@@ -188,7 +187,6 @@
             <h3>Ventilation</h3>
             <p>To ensure the air you breathe is high quality and free from moisture, odours, smoke, heat, dust, airborne bacteria and carbon dioxide. Climatics offer a range of mechanical ventilation systems for domestic and commercial buildings. Hygienic,
                 clean, fresh, reliable.</p>
-            <a href="#home">Back to Top</a>
         </div>
 
     </div>
@@ -206,7 +204,6 @@
             <p>
                 All components and systems are covered by manufacturer's warranty and all work is carried out in accordance to government standards and requirements. Take control of your environment and live in complete comfort all year round. For more information on
                 Climatics Heating and Cooling, call our team today.</p>
-            <a href="#home">Back to Top</a>
         </div>
 
     </div>
@@ -263,10 +260,11 @@
                     </div>
                 </div>
             </div>
-            <a href="#home">Back to Top</a>
         </div>
 
     </div>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <!-- footer -->
     <footer>
