resolved ridiculus github pages image issue

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row main-supplier">
             <div class="col-12">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/Hunt domestic horizontal with trademark.png" class="card-img-top" alt="...">
+                    <img src="images/logos/Hunt domestic horizontal with trademark.png" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Hunt</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -86,7 +86,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/purmo.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/purmo.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Purmo</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -96,7 +96,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/bosch.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/bosch.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Bosch</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -106,7 +106,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/daikin.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/daikin.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Daikin</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -116,7 +116,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/henrad.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/henrad.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Hendrad</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -126,7 +126,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/purmo.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/purmo.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Purmo</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -136,7 +136,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/purmo.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/purmo.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Purmo</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -146,7 +146,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/purmo.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/purmo.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Purmo</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -156,7 +156,7 @@
 
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <img src="/images/logos/purmo.jpg" class="card-img-top" alt="...">
+                    <img src="images/logos/purmo.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
                         <h5 class="card-title mb-0">Purmo</h5>
                         <div class="card-text text-black-50">Supplier</div>
@@ -256,7 +256,7 @@
                 <div class="col-md-6 col-md-offset-3">
                     <div class="well well-sm service_area">
                         <legend>Service area</legend>
-                        <img src="/images/Climatics Serviced Areas.png" alt="">
+                        <img src="images/Climatics Serviced Areas.png" alt="">
                     </div>
                 </div>
             </div>
